--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-streamlit
+streamlit>=1.31.0
+openai>=1.12.0
+numpy>=1.24.0
+pandas>=2.0.0
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+python-dotenv>=1.0.0
