--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit>=1.31.0
-openai>=1.12.0
-numpy>=1.24.0
-pandas>=2.0.0
-beautifulsoup4>=4.12.0
-requests>=2.31.0
-python-dotenv>=1.0.0
+streamlit>=1.18.0
+requests>=2.28.0
+beautifulsoup4>=4.11.1
+numpy>=1.20.0
+pandas>=1.3.0
+scipy>=1.7.0
+torch>=2.0.0
+sentence-transformers>=2.2.2
+requests-html
+webdriver-manager==4.0.1
